--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,4 @@
-﻿/*!
- * ZenPen
- * http://www.zenpen.io
- * MIT licensed
- *
- * Copyright (C) Tim Holman, http://tholman.com
- */
-
-
-/*********************************************
+﻿/*********************************************
  * BASE STYLES
  *********************************************/
 
@@ -26,17 +17,17 @@ html {
 
 
 html, body {
-    font-family: 'Lora', serif;
+    font-family: 'Roboto', serif;
     padding: 0;
     margin: 0;
     height: 100%;
 }
 
 body {
-    padding-bottom: 40px;
-    padding-right: 10px;
+    padding-bottom: 45px;
+    padding-right: 12px;
     overflow-y: scroll;
-    padding-left: 10px;
+    padding-left: 12px;
     padding-top: 20px;
     min-width: 800px;
     width: 100%;
@@ -96,12 +87,12 @@ blockquote {
     font-family: 'icomoon' !important;
 }
 
-.yin {
+.writer {
     background: #fdfdfd;
     color: #111;
 }
 
-.yang {
+.darkmode {
     background-color: #111;
     color: #fafafa;
 }
@@ -111,12 +102,12 @@ blockquote {
     padding: 20px;
     width: 65px;
     bottom: 0;
-    right: 0;
+    right: 5px;
     top: 0;
 }
 
     .ui:hover button, .ui:hover .about {
-        opacity: .4;
+        opacity: .3;
     }
 
     .ui button:hover, .ui .about:hover {
@@ -134,7 +125,7 @@ blockquote {
         cursor: pointer;
         font-size: 25px;
         color: inherit;
-        opacity: .1;
+        opacity: .6;
         padding: 0;
         height: 32px;
         width: 25px;
@@ -169,9 +160,9 @@ a {
  * MODAL
  *********************************************/
 
-.yang .modal {
-    background-color: rgba(255,255,255,.9);
-    color: #111;
+.darkmode .modal {
+    background-color: rgba(250,250,250,.9);
+    color: #115;
 }
 
 .modal {
@@ -272,7 +263,7 @@ a {
     margin-top: -2px;
 }
 
-.yang .savebutton {
+.darkmode .savebutton {
     color: #000;
 }
 
@@ -402,7 +393,7 @@ a {
         height: 30px;
         border-radius: 3px;
         margin-right: 1px;
-        font-family: 'Lora', serif;
+        font-family: 'Roboto', serif;
     }
 
 .about {
@@ -439,7 +430,7 @@ a {
     opacity: 1;
 }
 
-.yang .options button.active {
+.darkmode .options button.active {
     background-color: rgba(0,0,0,.3);
 }
 
@@ -461,12 +452,12 @@ a {
     left: 50%;
 }
 
-.yang .options {
+.darkmode .options {
     background-color: rgba(255,255,255,.9);
     color: #000;
 }
 
-    .yang .options:before {
+    .darkmode .options:before {
         border-top: 5px solid rgba(255,255,255,.9);
     }
 
